--- a/src/App.css
+++ b/src/App.css
@@ -1,109 +1,105 @@
-.App {
-  text-align: center;
+.App{
+    text-align: center;
 }
-
-.App-header {
-  background-color: #141418;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 1vmin);
-  color: white;
+.App-header{
+    background-color: #141418;
+    min-width: 540px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 1vmin);
+    color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.bodyContaine {
+        min-width: 504px;
+        display: flex;
+        justify-content: center;
+        margin: 30px auto;
 }
-
-.bodyContainer {
-  min-width: 400px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 30px auto;
+.bodyContainer{
+    flex-direction: column;
 }
-.searchBox, .recommendBox {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 500px;
-  height: 2045px;
-  margin: 15px;
+@media screen and (min-width:1040px){
+    .bodyContainer{
+        flex-direction: row;
+    }
+    .searchBox, .recommendBox{
+        min-height: 2045px;
+    }
 }
-.searchBox:hover, .recommendBox:hover {
-  box-shadow: 0 8px 32px 0 rgba(0,0,0,0.2);
+.searchBox, .recommendBox{
+    min-width: 504px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin: 15px;
+    padding: 10px;
+}
+.searchBox:hover, .recommendBox:hover{
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.2);
 }
 .selectedBox{
-  height: 340px;
+    height: 340px;
 }
-
-.sliderContainer {
-  width: 80%;
-  margin: 30px auto 10px;
+.sliderContainer{
+    width: 80%;
+    margin: 30px auto 10px;
 }
-
-.input-range__slider {
-  background: #3f51b5;
-  border: 1px solid #3f51b5;
+.input-range__slider{
+    background: #3f51b5;
+    border: 1px solid #3f51b5;
 }
-
-.input-range__track--active {
-  background: #3f51b5;
+.input-range__track--active{
+    background: #3f51b5;
 }
-
-
-.rightIcon {
-  padding-left: 10px;
+.rightIcon{
+    padding-left: 10px;
 }
-
-.create_playlist {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  flex-wrap:wrap;
+.create_playlist{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: center;
 }
-
-.create_playlist > button {
-  margin: 0 15px;
+.create_playlist > button{
+    margin: 0 15px;
 }
-
-.get_token {
-  margin: 15px auto !important;
+.get_token{
+    margin: 15px auto !important;
 }
-
-h4 {
-  margin-top: 0px;
-  font-size: 20px;
+h4{
+    margin-top: 0px;
+    font-size: 20px;
 }
 
 .sliders {
-  text-align: left;
-  display: block;
-  margin: 15px;
+    text-align: left;
+    display: block;
+    margin: 15px;
 }
 
 .input-range {
-  margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .create_playlist > * {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 .li {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 .listItem {
-  transition: 0.25s;
+    transition: 0.25s;
 }
 .listItem:hover {
-  background-color: #e6e6e6;
+    background-color: #e6e6e6;
 }
 .overflow {
-  width: 300px;
-  overflow:hidden; 
-  white-space:nowrap; 
-  text-overflow: ellipsis;
+    width: 300px;
+    overflow:hidden; 
+    white-space:nowrap; 
+    text-overflow: ellipsis;
 }
 .btn-margin {
-  margin: 10px;
+    margin: 10px;
 }
