--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
 }
 .App-header{
     background-color: #141418;
-    min-width: 504px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +11,6 @@
     color: white;
 }
 .bodyContainer {
-        min-width: 504px;
         display: flex;
         justify-content: center;
         margin: 30px auto;
@@ -27,9 +25,11 @@
     .searchBox, .recommendBox{
         min-height: 2045px;
     }
+    .overflow{
+        width: 300px;
+    }
 }
 .searchBox, .recommendBox{
-    min-width: 504px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin: 15px;
@@ -89,13 +89,17 @@ h4{
     margin: 0 auto;
 }
 .listItem {
+    display: flex;
     transition: 0.25s;
+}
+.listItem > button{
+    min-width: 40px;
+    min-height: 40px;
 }
 .listItem:hover {
     background-color: #e6e6e6;
 }
 .overflow {
-    width: 300px;
     overflow:hidden; 
     white-space:nowrap; 
     text-overflow: ellipsis;
