even more mobile friendly

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
         flex-direction: row;
     }
     .searchBox, .recommendBox{
+        min-width: 504px;
         min-height: 2045px;
     }
     .overflow{
