--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+
+h4{
+    margin-top: 0px;
+    font-size: 20px;
+}
+a{
+    color: white;
+}
 .App{
     text-align: center;
 }
@@ -67,16 +75,6 @@
 }
 .get_token{
     margin: 15px auto !important;
-}
-h4{
-    margin-top: 0px;
-    font-size: 20px;
-}
-
-.sliders {
-    text-align: left;
-    display: block;
-    margin: 15px;
 }
 
 .input-range {
